[package]
name = "template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "template description :^)"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
once_cell = "1.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "f10a2d7" }

[build-dependencies]
# winres project
winres = "0.1"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }
