[package]
name = "arrow"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "Some Random API"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
once_cell = "1.14.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "f10a2d7", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
# winres project
winres = "0.1"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }
